<resources>
    <string name="app_name">Yodha</string>
    <string name="app_title">YODHA</string>
    <string name="email">Enter Email Id</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="loginmob">Login with mobile</string>
    <string name="signup">Signup</string>
    <string name="forgotpassword">Forgot  Password ?</string>
    <string name="you_have_not_account">You have not an account</string>
    <string name="completepro">Complete Profile</string>
    <string name="mobilenu">Enter Mobile number</string>
    <string name="entername">Enter Name</string>
    <string name="enteremailid">Enter Email id</string>
    <string name="you_have_an_account">You have an account</string>
    <string name="entermobotp">Enter Mobile otp</string>
    <string name="tab_text_1">Offer</string>
    <string name="tab_text_2">Super Offer</string>
    <string name="about">About</string>
    <string name="title_report">Reports</string>
    <string name="splash_title2">From</string>
    <string name="faqs">Faqs</string>
    <string name="question">Q :</string>
    <string name="answer">A :</string>
    <string name="shareinvitevia">Share Invite Via</string>
    <string name="whatapp">WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="get_msg_exit">Press Again To Exit</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="copylink">Copy Link</string>
    <string name="invite">Invite Friends</string>
    <string name="how_it_works">How it works?</string>
    <string name="referral_link_cpoied">Referral Link Copied!</string>
    <string name="affiliate_link_cpoied">Affiliate Link Copied!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_rate_us">Rate us</string>
    <string name="name">Enter User Name</string>
    <string name="street">Enter Street</string>
    <string name="pincode">Enter Pincode</string>
    <string name="distric">Enter District</string>
    <string name="submit">Submit</string>
    <string name="otpverification">OTP Verification</string>
    <string name="otpverificationtetx">Enter the OTP send to</string>
    <string name="verify">Verify</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Select Gender</string>
    <string name="education">Select Education</string>
    <string name="upto5th">Up to 5th</string>
    <string name="tenth">10th</string>
    <string name="twelth">12th</string>
    <string name="graduted">Graduate</string>
    <string name="large"><![CDATA[Large(>100)]]></string>
    <string name="madium">Madium(31 to 100)</string>
    <string name="small">Small(10 to 30)</string>
    <string name="noncommericial"><![CDATA[Non-commercial house hold purpose(<10)]]></string>
    <string name="selectfarm">Select Farm Size</string>
    <string name="dashtitle">Data Input</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashtitle1">Output and Analysis</string>
    <string name="state">Enter State</string>
    <string name="townvillage">Enter Town/Village/Taluka</string>
    <string name="animaldetails">Animal Details</string>
    <string name="animalid">Enter Animal ID/Tag</string>
    <string name="animalidtitr">Animal ID</string>
    <string name="sellanalysis">Sell Data Master Sheet</string>
    <string name="reprotanal">Reproduction Analysis</string>
    <string name="animmallist">List of Animals and Pedigree</string>
    <string name="protanalysis">Production Analysis</string>
    <string name="disesoccur">Disease Occurrence</string>
    <string name="reprodtion">Reproduction</string>
    <string name="todayproduct">Today\'s Production</string>
    <string name="expenture">Expenditure</string>
    <string name="diseseds">Diseases</string>
    <string name="fortonight">Fortnight Production</string>
    <string name="contactsus">Contact us</string>
    <string name="logout">Logout</string>
    <string name="spacies">Species</string>
    <string name="breed">Breed</string>
    <string name="dob">Date Of Birth</string>
    <string name="sireno">Sire No./Straw No.</string>
    <string name="dam">Dam No.</string>
    <string name="app_titleone">Your Own Dairy</string>
    <string name="app_titletwo">Herd-data Analyzer</string>
    <string name="app_titlecopy">ALL COPYRIGHTS RESERVED BY COABT-GADVASU</string>
    <string name="hyperlink"><a href="https://www.geeksforgeeks.org/">geeksforgeeks.org</a></string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="age">Enter age</string>
    <string name="othersdetails">Other Details</string>
    <string name="emailus">Contact us</string>
    <string name="animalfare">Animal fare</string>
    <string name="village">Same Village</string>
    <string name="emarket">e-market</string>
    <string name="vendor">Others Vendor</string>
    <string name="dobpurchage">Date of Purchase</string>
    <string name="purchagefrm">Purchased From</string>
    <string name="ownersconts">Owner\'s Contact</string>
    <string name="geotag">Geo Tagging</string>
    <string name="educationtit">Education</string>
    <string name="gendertit">Gender</string>
    <string name="framname">Farm Name</string>
    <string name="framsize">Farm Size</string>
    <string name="framstrret">Street</string>
    <string name="framcity">City</string>
    <string name="framdistric">District</string>
    <string name="framstate">State</string>
    <string name="termsandcondition">Terms and condition</string>
    <string name="date">Date</string>
    <string name="entermlkyieldmn">Milk Yield Morning</string>
    <string name="milksolodmorn">Milk Sold Morning</string>
    <string name="milkusdcalves">Milk used for calves</string>
    <string name="milkathome">Milk used at home</string>
    <string name="milkeven">Milk Yield Evening</string>
    <string name="milkevensold">Milk Sold Evening</string>
    <string name="milkevencalves">Milk used for calves</string>
    <string name="todayproct">Total Today\'s Production</string>
    <string name="todaysold">Total Milk Sold Today</string>
    <string name="strow_no">Straw no</string>
    <string name="breed_type">Breed</string>
    <string name="animalagainheat">Animal again in heat : </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="second_aistrow_no">Second AI Straw</string>
    <string name="second_aibreed">Second Ai Breed</string>
    <string name="second_aidate">Second AI Date</string>
    <string name="fourth_aidate">Fourth Ai date</string>
    <string name="fourth_aibreed">Fourth AI breed</string>
    <string name="fourth_aistrow_no">Fourth AI straw</string>
    <string name="third_aidate">Third AI date</string>
    <string name="third_aibreed">Third AI breed</string>
    <string name="third_aistrow_no">Third AI straw</string>
    <string name="fifth_aistrow_no">Fifth  AI straw</string>
    <string name="fift_aibreed">Fifth AI breed</string>
    <string name="fift_aidate">Fifth AI date</string>
    <string name="pregnecydate">Pregnancy confirmed date</string>
    <string name="pregencycheckby">Pregnancy checked by :</string>
    <string name="vet">Vet</string>
    <string name="prevent">Paravet</string>
    <string name="self">Self</string>
    <string name="expectedcalvingdt">Expected calving date</string>
    <string name="actualcalvingdate">Actual calving date</string>
    <string name="othersold">Other sold</string>
    <string name="gheeproductsold">Ghee sold</string>
    <string name="manuresold">Manure sold</string>
    <string name="gunnysold">Gunny sold</string>
    <string name="animalsold">Animal sold</string>
    <string name="dateexpeture">Date</string>
    <string name="mornfat">Fat</string>
    <string name="monrsnf">Snf</string>
    <string name="entermlkyieldeven">Milk Yield (Evening)</string>
    <string name="milksolodeven">Milk Sold Evening</string>
    <string name="disesdetectetd">Disease detected</string>
    <string name="mastitis">Mastitis</string>
    <string name="stillbirth">Still birth</string>
    <string name="prolapse">Prolapse</string>
    <string name="respiratoryproblem">Respiratory problem/Pneumonia</string>
    <string name="digestion">Digestion Problem</string>
    <string name="anyother">Any other disease</string>
    <string name="comment">Enter Comments</string>
    <string name="mastitiscured">Mastitis cured</string>
    <string name="stillbirthcured">Still birth Cured</string>
    <string name="prolapsecured">Prolapse Cured</string>
    <string name="respiratoryproblemcured">Respiratory problem Cured</string>
    <string name="digestioncured">Digestion problem Cured</string>
    <string name="othersoldwrite">Other sold write</string>
    <string name="todaysoldprice">Total milk sold price</string>
    <string name="animalpurchange">Animal purchase cost</string>
    <string name="feedweight">Feed weight</string>
    <string name="feedprice">Feed cost</string>
    <string name="mineralmixweight">Mineral mix weight</string>
    <string name="mineralmixprice">Mineral mix cost</string>
    <string name="greenfodder">Green fodder weight</string>
    <string name="greenfoddercost">Green fodder cost</string>
    <string name="vactinationcost">Vaccination cost</string>
    <string name="medicinecost">Medicine cost</string>
    <string name="vetcost">Vet cost</string>
    <string name="aicost">AI cost</string>
    <string name="shetercost">Shelter cost</string>
    <string name="neweqipment">New equipment name</string>
    <string name="neweqipmentcost">New equipment cost</string>
    <string name="labour">Labour cost</string>
    <string name="electriccost">Electricity cost</string>
    <string name="loaninterest">Loan interest</string>
    <string name="consruction">Construction cost</string>
    <string name="insurancecost">Insurance cost</string>
    <string name="misccost">Misc expensive cost</string>
    <string name="relapsedate">Relapse of Disease Before</string>
    <string name="relapsedatecurt">Date of previous relapse</string>
    <string name="paravet">Paravet</string>
    <string name="username">User Name</string>
    <string name="animalidtit">Animal ID</string>
    <string name="delete">Delete</string>
    <string name="sno">S.No</string>
    <string name="expendituredata">Expenditure Details</string>
    <string name="cost">Cost</string>
</resources>