<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/LLchildlay">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sno"
            android:layout_weight="0.5"
            android:padding="@dimen/x4"
            android:id="@+id/TVsrno"/>

        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:background="@color/lighlt_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:padding="@dimen/x4"
            android:id="@+id/TVexpdate"/>
        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:background="@color/lighlt_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/expendituredata"
            android:layout_weight="1.5"
            android:padding="@dimen/x4"
            android:id="@+id/TVexpentutured"/>
        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:background="@color/lighlt_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:layout_weight="1"
            android:padding="@dimen/x4"
            android:id="@+id/TVcost"/>

    </LinearLayout>
